// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compose snapshot tests > creator preset (ffmpeg + remotion + minio + redis) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      PUID: \${PUID:-1000}
      PGID: \${PGID:-1000}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
      NOTIFY_DISCORD: \${NOTIFY_DISCORD:-}
      NOTIFY_SLACK: \${NOTIFY_SLACK:-}
      NOTIFY_TELEGRAM_TOKEN: \${NOTIFY_TELEGRAM_TOKEN:-}
      NOTIFY_TELEGRAM_CHAT: \${NOTIFY_TELEGRAM_CHAT:-}
      NOTIFY_EMAIL_TO: \${NOTIFY_EMAIL_TO:-}
      NOTIFY_EMAIL_FROM: \${NOTIFY_EMAIL_FROM:-}
      NOTIFY_EMAIL_SMTP: \${NOTIFY_EMAIL_SMTP:-}
      NOTIFY_NTFY_TOPIC: \${NOTIFY_NTFY_TOPIC:-}
      NOTIFY_PUSHOVER_TOKEN: \${NOTIFY_PUSHOVER_TOKEN:-}
      NOTIFY_PUSHOVER_USER: \${NOTIFY_PUSHOVER_USER:-}
      NOTIFY_GOTIFY_URL: \${NOTIFY_GOTIFY_URL:-}
      NOTIFY_GOTIFY_TOKEN: \${NOTIFY_GOTIFY_TOKEN:-}
      FFMPEG_SHARED_DIR: /home/node/.openclaw/workspace/media
      MINIO_HOST: minio
      MINIO_PORT: "9000"
      MINIO_ACCESS_KEY: \${MINIO_ROOT_USER}
      MINIO_SECRET_KEY: \${MINIO_SECRET_KEY}
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      REMOTION_HOST: remotion
      REMOTION_PORT: "3000"
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
      - ffmpeg-shared:/home/node/.openclaw/workspace/media
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
      - --allow-unconfigured
    healthcheck:
      test:
        - CMD
        - node
        - -e
        - fetch('http://127.0.0.1:18789/healthz').then((r)=>process.exit(r.ok?0:1)).catch(()=>process.exit(1))
      interval: 30s
      timeout: 5s
      retries: 5
      start_period: 20s
    depends_on:
      convex:
        condition: service_healthy
      minio:
        condition: service_healthy
      redis:
        condition: service_healthy
  convex:
    image: ghcr.io/get-convex/convex-backend:latest
    environment:
      CONVEX_CLOUD_ORIGIN: http://127.0.0.1:3210
      CONVEX_SITE_ORIGIN: http://127.0.0.1:3211
      INSTANCE_NAME: openclaw-convex
      INSTANCE_SECRET: \${INSTANCE_SECRET}
      DATABASE_URL: \${DATABASE_URL}
      RUST_LOG: info
      DISABLE_BEACON: ""
      CONVEX_SELF_HOSTED_ADMIN_KEY: \${CONVEX_SELF_HOSTED_ADMIN_KEY}
      CONVEX_INSTANCE_SECRET: \${CONVEX_INSTANCE_SECRET}
    ports:
      - \${CONVEX_EXTERNAL_PORT_0:-3210}:3210
      - \${CONVEX_EXTERNAL_PORT_1:-3211}:3211
    volumes:
      - convex-data:/convex/data
    healthcheck:
      test:
        - CMD-SHELL
        - curl -f http://localhost:3210/version
      interval: 5s
      timeout: 5s
      retries: 5
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  minio:
    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
    environment:
      MINIO_ROOT_USER: minioadmin
      MINIO_ROOT_PASSWORD: \${MINIO_ROOT_PASSWORD}
    ports:
      - \${MINIO_EXTERNAL_PORT_0:-9000}:9000
      - \${MINIO_EXTERNAL_PORT_1:-9001}:9001
    volumes:
      - minio-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - mc ready local || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
    command: server /data --console-address ':9001'
  redis:
    image: redis:8-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_EXTERNAL_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    network_mode: service:openclaw-gateway
    cap_drop:
      - NET_RAW
      - NET_ADMIN
    security_opt:
      - no-new-privileges:true
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    entrypoint:
      - node
      - dist/index.js
    depends_on:
      - openclaw-gateway
volumes:
  convex-data:
  ffmpeg-shared:
  minio-data:
  redis-data:
  tailscale-state:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > creator preset (ffmpeg + remotion + minio + redis) 2`] = `
"services:
  ffmpeg:
    image: linuxserver/ffmpeg:8.0.1-cli-ls58
    environment:
      PUID: "1000"
      PGID: "1000"
    volumes:
      - ffmpeg-shared:/data
    restart: unless-stopped
    networks:
      - openclaw-network
    entrypoint: tail -f /dev/null
    profiles:
      - media
  remotion:
    image: remotion-dev/studio:4
    ports:
      - \${REMOTION_EXTERNAL_PORT:-3020}:3000
    restart: unless-stopped
    networks:
      - openclaw-network
    profiles:
      - media
volumes:
  ffmpeg-shared:
"
`;

exports[`compose snapshot tests > devops preset (n8n + postgresql + redis + monitoring) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      PUID: \${PUID:-1000}
      PGID: \${PGID:-1000}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
      NOTIFY_DISCORD: \${NOTIFY_DISCORD:-}
      NOTIFY_SLACK: \${NOTIFY_SLACK:-}
      NOTIFY_TELEGRAM_TOKEN: \${NOTIFY_TELEGRAM_TOKEN:-}
      NOTIFY_TELEGRAM_CHAT: \${NOTIFY_TELEGRAM_CHAT:-}
      NOTIFY_EMAIL_TO: \${NOTIFY_EMAIL_TO:-}
      NOTIFY_EMAIL_FROM: \${NOTIFY_EMAIL_FROM:-}
      NOTIFY_EMAIL_SMTP: \${NOTIFY_EMAIL_SMTP:-}
      NOTIFY_NTFY_TOPIC: \${NOTIFY_NTFY_TOPIC:-}
      NOTIFY_PUSHOVER_TOKEN: \${NOTIFY_PUSHOVER_TOKEN:-}
      NOTIFY_PUSHOVER_USER: \${NOTIFY_PUSHOVER_USER:-}
      NOTIFY_GOTIFY_URL: \${NOTIFY_GOTIFY_URL:-}
      NOTIFY_GOTIFY_TOKEN: \${NOTIFY_GOTIFY_TOKEN:-}
      POSTGRES_HOST: postgresql
      POSTGRES_PORT: "5432"
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      N8N_HOST: n8n
      N8N_PORT: "5678"
      N8N_WEBHOOK_URL: http://n8n:5678/
      GRAFANA_HOST: grafana
      GRAFANA_PORT: "3000"
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
      - --allow-unconfigured
    healthcheck:
      test:
        - CMD
        - node
        - -e
        - fetch('http://127.0.0.1:18789/healthz').then((r)=>process.exit(r.ok?0:1)).catch(()=>process.exit(1))
      interval: 30s
      timeout: 5s
      retries: 5
      start_period: 20s
    depends_on:
      convex:
        condition: service_healthy
      postgresql:
        condition: service_healthy
      redis:
        condition: service_healthy
      n8n:
        condition: service_healthy
  convex:
    image: ghcr.io/get-convex/convex-backend:latest
    environment:
      CONVEX_CLOUD_ORIGIN: http://127.0.0.1:3210
      CONVEX_SITE_ORIGIN: http://127.0.0.1:3211
      INSTANCE_NAME: openclaw-convex
      INSTANCE_SECRET: \${INSTANCE_SECRET}
      DATABASE_URL: \${DATABASE_URL}
      RUST_LOG: info
      DISABLE_BEACON: ""
      CONVEX_SELF_HOSTED_ADMIN_KEY: \${CONVEX_SELF_HOSTED_ADMIN_KEY}
      CONVEX_INSTANCE_SECRET: \${CONVEX_INSTANCE_SECRET}
    ports:
      - \${CONVEX_EXTERNAL_PORT_0:-3210}:3210
      - \${CONVEX_EXTERNAL_PORT_1:-3211}:3211
    volumes:
      - convex-data:/convex/data
    healthcheck:
      test:
        - CMD-SHELL
        - curl -f http://localhost:3210/version
      interval: 5s
      timeout: 5s
      retries: 5
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  postgresql:
    image: postgres:17-alpine
    environment:
      POSTGRES_USER: openclaw
      POSTGRES_PASSWORD: \${POSTGRES_PASSWORD}
      POSTGRES_DB: openclaw
      N8N_DB_PASSWORD: \${N8N_DB_PASSWORD}
    ports:
      - \${POSTGRESQL_EXTERNAL_PORT:-5432}:5432
    volumes:
      - postgres-data:/var/lib/postgresql/data
      - ./postgres/init-databases.sh:/docker-entrypoint-initdb.d/init-databases.sh:ro
    healthcheck:
      test:
        - CMD-SHELL
        - pg_isready -U openclaw
      interval: 10s
      timeout: 5s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
  redis:
    image: redis:8-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_EXTERNAL_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  n8n:
    image: docker.n8n.io/n8nio/n8n:1.123.21
    environment:
      N8N_BASIC_AUTH_ACTIVE: "true"
      N8N_BASIC_AUTH_USER: admin
      N8N_BASIC_AUTH_PASSWORD: \${N8N_BASIC_AUTH_PASSWORD}
      DB_TYPE: postgresdb
      DB_POSTGRESDB_HOST: postgresql
      DB_POSTGRESDB_PORT: "5432"
      DB_POSTGRESDB_DATABASE: n8n
      DB_POSTGRESDB_USER: n8n
      DB_POSTGRESDB_PASSWORD: \${DB_POSTGRESDB_PASSWORD}
      N8N_PORT: "5678"
      WEBHOOK_URL: http://n8n:5678/
    ports:
      - \${N8N_EXTERNAL_PORT:-5678}:5678
    volumes:
      - n8n-data:/home/node/.n8n
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:5678/healthz || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
    depends_on:
      postgres-setup:
        condition: service_completed_successfully
  postgres-setup:
    image: postgres:17-alpine
    depends_on:
      postgresql:
        condition: service_healthy
    environment:
      PGHOST: postgresql
      PGUSER: \${POSTGRES_USER:-openclaw}
      PGDATABASE: \${POSTGRES_DB:-openclaw}
      PGPASSWORD: \${POSTGRES_PASSWORD}
      N8N_DB_PASSWORD: \${N8N_DB_PASSWORD}
    entrypoint:
      - /bin/sh
      - -c
    command:
      - >-
        echo '=== PostgreSQL database setup ==='

        FAILED=0

        echo "Setting up database 'n8n' with user 'n8n'..."

        psql -c "SELECT 1 FROM pg_roles WHERE rolname='n8n'" | grep -q 1 || psql -c "CREATE ROLE n8n WITH LOGIN PASSWORD
        '$$N8N_DB_PASSWORD'"

        psql -c "ALTER ROLE n8n WITH LOGIN PASSWORD '$$N8N_DB_PASSWORD'"

        psql -tc "SELECT 1 FROM pg_database WHERE datname='n8n'" | grep -q 1 || psql -c "CREATE DATABASE n8n OWNER n8n"

        psql -c "GRANT ALL PRIVILEGES ON DATABASE n8n TO n8n" || FAILED=1

        echo "  Done: n8n"

        echo '=== All databases ready ==='

        exit $$FAILED
    restart: "no"
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    network_mode: service:openclaw-gateway
    cap_drop:
      - NET_RAW
      - NET_ADMIN
    security_opt:
      - no-new-privileges:true
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    entrypoint:
      - node
      - dist/index.js
    depends_on:
      - openclaw-gateway
volumes:
  convex-data:
  grafana-data:
  n8n-data:
  postgres-data:
  prometheus-data:
  redis-data:
  tailscale-state:
  uptime-kuma-data:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > devops preset (n8n + postgresql + redis + monitoring) 2`] = `
"services:
  prometheus:
    image: prom/prometheus:v3.10.0
    ports:
      - \${PROMETHEUS_EXTERNAL_PORT:-9090}:9090
    volumes:
      - prometheus-data:/prometheus
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:9090/-/healthy || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
    command: --config.file=/etc/prometheus/prometheus.yml --storage.tsdb.path=/prometheus
    profiles:
      - monitoring
  uptime-kuma:
    image: louislam/uptime-kuma:2
    ports:
      - \${UPTIME_KUMA_EXTERNAL_PORT:-3001}:3001
    volumes:
      - uptime-kuma-data:/app/data
    healthcheck:
      test:
        - CMD-SHELL
        - curl -sf http://localhost:3001 || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
    profiles:
      - monitoring
  grafana:
    image: grafana/grafana:12.4.2
    environment:
      GF_SECURITY_ADMIN_USER: admin
      GF_SECURITY_ADMIN_PASSWORD: \${GF_SECURITY_ADMIN_PASSWORD}
    ports:
      - \${GRAFANA_EXTERNAL_PORT:-3150}:3000
    volumes:
      - grafana-data:/var/lib/grafana
    healthcheck:
      test:
        - CMD-SHELL
        - curl -sf http://localhost:3000/api/health || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
    depends_on:
      prometheus:
        condition: service_healthy
    profiles:
      - monitoring
volumes:
  grafana-data:
  prometheus-data:
  uptime-kuma-data:
"
`;

exports[`compose snapshot tests > full preset (many services) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      PUID: \${PUID:-1000}
      PGID: \${PGID:-1000}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
      NOTIFY_DISCORD: \${NOTIFY_DISCORD:-}
      NOTIFY_SLACK: \${NOTIFY_SLACK:-}
      NOTIFY_TELEGRAM_TOKEN: \${NOTIFY_TELEGRAM_TOKEN:-}
      NOTIFY_TELEGRAM_CHAT: \${NOTIFY_TELEGRAM_CHAT:-}
      NOTIFY_EMAIL_TO: \${NOTIFY_EMAIL_TO:-}
      NOTIFY_EMAIL_FROM: \${NOTIFY_EMAIL_FROM:-}
      NOTIFY_EMAIL_SMTP: \${NOTIFY_EMAIL_SMTP:-}
      NOTIFY_NTFY_TOPIC: \${NOTIFY_NTFY_TOPIC:-}
      NOTIFY_PUSHOVER_TOKEN: \${NOTIFY_PUSHOVER_TOKEN:-}
      NOTIFY_PUSHOVER_USER: \${NOTIFY_PUSHOVER_USER:-}
      NOTIFY_GOTIFY_URL: \${NOTIFY_GOTIFY_URL:-}
      NOTIFY_GOTIFY_TOKEN: \${NOTIFY_GOTIFY_TOKEN:-}
      BROWSERLESS_HOST: browserless
      BROWSERLESS_PORT: "3000"
      BROWSERLESS_TOKEN: \${BROWSERLESS_TOKEN}
      CADDY_HOST: caddy
      CADDY_HTTP_PORT: "80"
      FFMPEG_SHARED_DIR: /home/node/.openclaw/workspace/media
      GOTIFY_HOST: gotify
      GOTIFY_PORT: "80"
      MEILISEARCH_HOST: meilisearch
      MEILISEARCH_PORT: "7700"
      MEILISEARCH_MASTER_KEY: \${MEILISEARCH_MASTER_KEY}
      MINIO_HOST: minio
      MINIO_PORT: "9000"
      MINIO_ACCESS_KEY: \${MINIO_ROOT_USER}
      MINIO_SECRET_KEY: \${MINIO_SECRET_KEY}
      OLLAMA_HOST: ollama
      OLLAMA_PORT: "11434"
      POSTGRES_HOST: postgresql
      POSTGRES_PORT: "5432"
      QDRANT_HOST: qdrant
      QDRANT_PORT: "6333"
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      REMOTION_HOST: remotion
      REMOTION_PORT: "3000"
      SEARXNG_HOST: searxng
      SEARXNG_PORT: "8080"
      WHISPER_HOST: whisper
      WHISPER_PORT: "8000"
      N8N_HOST: n8n
      N8N_PORT: "5678"
      N8N_WEBHOOK_URL: http://n8n:5678/
      GRAFANA_HOST: grafana
      GRAFANA_PORT: "3000"
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
      - ffmpeg-shared:/home/node/.openclaw/workspace/media
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
      - --allow-unconfigured
    healthcheck:
      test:
        - CMD
        - node
        - -e
        - fetch('http://127.0.0.1:18789/healthz').then((r)=>process.exit(r.ok?0:1)).catch(()=>process.exit(1))
      interval: 30s
      timeout: 5s
      retries: 5
      start_period: 20s
    depends_on:
      browserless:
        condition: service_healthy
      caddy:
        condition: service_healthy
      convex:
        condition: service_healthy
      meilisearch:
        condition: service_healthy
      minio:
        condition: service_healthy
      postgresql:
        condition: service_healthy
      qdrant:
        condition: service_healthy
      redis:
        condition: service_healthy
      searxng:
        condition: service_healthy
      n8n:
        condition: service_healthy
  browserless:
    image: browserless/chrome:latest
    environment:
      TOKEN: \${TOKEN}
      MAX_CONCURRENT_SESSIONS: "5"
    ports:
      - \${BROWSERLESS_EXTERNAL_PORT:-3010}:3000
    healthcheck:
      test:
        - CMD-SHELL
        - curl -sf http://localhost:3000/?token=$TOKEN || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  caddy:
    image: caddy:2.11.2
    ports:
      - \${CADDY_EXTERNAL_PORT_0:-80}:80
      - \${CADDY_EXTERNAL_PORT_1:-443}:443
    volumes:
      - caddy-data:/data
      - caddy-config:/config
    healthcheck:
      test:
        - CMD-SHELL
        - curl -sf http://localhost:80 || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 5s
    restart: unless-stopped
    networks:
      - openclaw-network
  convex:
    image: ghcr.io/get-convex/convex-backend:latest
    environment:
      CONVEX_CLOUD_ORIGIN: http://127.0.0.1:3210
      CONVEX_SITE_ORIGIN: http://127.0.0.1:3211
      INSTANCE_NAME: openclaw-convex
      INSTANCE_SECRET: \${INSTANCE_SECRET}
      DATABASE_URL: \${DATABASE_URL}
      RUST_LOG: info
      DISABLE_BEACON: ""
      CONVEX_SELF_HOSTED_ADMIN_KEY: \${CONVEX_SELF_HOSTED_ADMIN_KEY}
      CONVEX_INSTANCE_SECRET: \${CONVEX_INSTANCE_SECRET}
    ports:
      - \${CONVEX_EXTERNAL_PORT_0:-3210}:3210
      - \${CONVEX_EXTERNAL_PORT_1:-3211}:3211
    volumes:
      - convex-data:/convex/data
    healthcheck:
      test:
        - CMD-SHELL
        - curl -f http://localhost:3210/version
      interval: 5s
      timeout: 5s
      retries: 5
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  meilisearch:
    image: getmeili/meilisearch:v1.40.0
    environment:
      MEILI_MASTER_KEY: \${MEILI_MASTER_KEY}
    ports:
      - \${MEILISEARCH_EXTERNAL_PORT:-7700}:7700
    volumes:
      - meilisearch-data:/meili_data
    healthcheck:
      test:
        - CMD-SHELL
        - curl -sf http://localhost:7700/health || exit 1
      interval: 30s
      timeout: 10s
      retries: 5
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  minio:
    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
    environment:
      MINIO_ROOT_USER: minioadmin
      MINIO_ROOT_PASSWORD: \${MINIO_ROOT_PASSWORD}
    ports:
      - \${MINIO_EXTERNAL_PORT_0:-9000}:9000
      - \${MINIO_EXTERNAL_PORT_1:-9001}:9001
    volumes:
      - minio-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - mc ready local || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
    command: server /data --console-address ':9001'
  postgresql:
    image: postgres:17-alpine
    environment:
      POSTGRES_USER: openclaw
      POSTGRES_PASSWORD: \${POSTGRES_PASSWORD}
      POSTGRES_DB: openclaw
      N8N_DB_PASSWORD: \${N8N_DB_PASSWORD}
    ports:
      - \${POSTGRESQL_EXTERNAL_PORT:-5432}:5432
    volumes:
      - postgres-data:/var/lib/postgresql/data
      - ./postgres/init-databases.sh:/docker-entrypoint-initdb.d/init-databases.sh:ro
    healthcheck:
      test:
        - CMD-SHELL
        - pg_isready -U openclaw
      interval: 10s
      timeout: 5s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
  qdrant:
    image: qdrant/qdrant:v1.17.1
    environment:
      QDRANT__SERVICE__GRPC_PORT: "6334"
    ports:
      - \${QDRANT_EXTERNAL_PORT:-6333}:6333
    volumes:
      - qdrant-data:/qdrant/storage
    healthcheck:
      test:
        - CMD-SHELL
        - bash -c 'echo > /dev/tcp/localhost/6333' || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  redis:
    image: redis:8-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_EXTERNAL_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  searxng:
    image: searxng/searxng:2026.2.23-4964d664f
    ports:
      - \${SEARXNG_EXTERNAL_PORT:-8080}:8080
    volumes:
      - searxng-data:/etc/searxng
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:8080/ || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  n8n:
    image: docker.n8n.io/n8nio/n8n:1.123.21
    environment:
      N8N_BASIC_AUTH_ACTIVE: "true"
      N8N_BASIC_AUTH_USER: admin
      N8N_BASIC_AUTH_PASSWORD: \${N8N_BASIC_AUTH_PASSWORD}
      DB_TYPE: postgresdb
      DB_POSTGRESDB_HOST: postgresql
      DB_POSTGRESDB_PORT: "5432"
      DB_POSTGRESDB_DATABASE: n8n
      DB_POSTGRESDB_USER: n8n
      DB_POSTGRESDB_PASSWORD: \${DB_POSTGRESDB_PASSWORD}
      N8N_PORT: "5678"
      WEBHOOK_URL: http://n8n:5678/
    ports:
      - \${N8N_EXTERNAL_PORT:-5678}:5678
    volumes:
      - n8n-data:/home/node/.n8n
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:5678/healthz || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 30s
    restart: unless-stopped
    networks:
      - openclaw-network
    depends_on:
      postgres-setup:
        condition: service_completed_successfully
  postgres-setup:
    image: postgres:17-alpine
    depends_on:
      postgresql:
        condition: service_healthy
    environment:
      PGHOST: postgresql
      PGUSER: \${POSTGRES_USER:-openclaw}
      PGDATABASE: \${POSTGRES_DB:-openclaw}
      PGPASSWORD: \${POSTGRES_PASSWORD}
      N8N_DB_PASSWORD: \${N8N_DB_PASSWORD}
    entrypoint:
      - /bin/sh
      - -c
    command:
      - >-
        echo '=== PostgreSQL database setup ==='

        FAILED=0

        echo "Setting up database 'n8n' with user 'n8n'..."

        psql -c "SELECT 1 FROM pg_roles WHERE rolname='n8n'" | grep -q 1 || psql -c "CREATE ROLE n8n WITH LOGIN PASSWORD
        '$$N8N_DB_PASSWORD'"

        psql -c "ALTER ROLE n8n WITH LOGIN PASSWORD '$$N8N_DB_PASSWORD'"

        psql -tc "SELECT 1 FROM pg_database WHERE datname='n8n'" | grep -q 1 || psql -c "CREATE DATABASE n8n OWNER n8n"

        psql -c "GRANT ALL PRIVILEGES ON DATABASE n8n TO n8n" || FAILED=1

        echo "  Done: n8n"

        echo '=== All databases ready ==='

        exit $$FAILED
    restart: "no"
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    network_mode: service:openclaw-gateway
    cap_drop:
      - NET_RAW
      - NET_ADMIN
    security_opt:
      - no-new-privileges:true
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    entrypoint:
      - node
      - dist/index.js
    depends_on:
      - openclaw-gateway
volumes:
  caddy-config:
  caddy-data:
  convex-data:
  ffmpeg-shared:
  gotify-data:
  grafana-data:
  meilisearch-data:
  minio-data:
  n8n-data:
  ollama-data:
  postgres-data:
  prometheus-data:
  qdrant-data:
  redis-data:
  searxng-data:
  tailscale-state:
  uptime-kuma-data:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > minimal preset (redis only) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      PUID: \${PUID:-1000}
      PGID: \${PGID:-1000}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
      NOTIFY_DISCORD: \${NOTIFY_DISCORD:-}
      NOTIFY_SLACK: \${NOTIFY_SLACK:-}
      NOTIFY_TELEGRAM_TOKEN: \${NOTIFY_TELEGRAM_TOKEN:-}
      NOTIFY_TELEGRAM_CHAT: \${NOTIFY_TELEGRAM_CHAT:-}
      NOTIFY_EMAIL_TO: \${NOTIFY_EMAIL_TO:-}
      NOTIFY_EMAIL_FROM: \${NOTIFY_EMAIL_FROM:-}
      NOTIFY_EMAIL_SMTP: \${NOTIFY_EMAIL_SMTP:-}
      NOTIFY_NTFY_TOPIC: \${NOTIFY_NTFY_TOPIC:-}
      NOTIFY_PUSHOVER_TOKEN: \${NOTIFY_PUSHOVER_TOKEN:-}
      NOTIFY_PUSHOVER_USER: \${NOTIFY_PUSHOVER_USER:-}
      NOTIFY_GOTIFY_URL: \${NOTIFY_GOTIFY_URL:-}
      NOTIFY_GOTIFY_TOKEN: \${NOTIFY_GOTIFY_TOKEN:-}
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
      - --allow-unconfigured
    healthcheck:
      test:
        - CMD
        - node
        - -e
        - fetch('http://127.0.0.1:18789/healthz').then((r)=>process.exit(r.ok?0:1)).catch(()=>process.exit(1))
      interval: 30s
      timeout: 5s
      retries: 5
      start_period: 20s
    depends_on:
      convex:
        condition: service_healthy
      redis:
        condition: service_healthy
  convex:
    image: ghcr.io/get-convex/convex-backend:latest
    environment:
      CONVEX_CLOUD_ORIGIN: http://127.0.0.1:3210
      CONVEX_SITE_ORIGIN: http://127.0.0.1:3211
      INSTANCE_NAME: openclaw-convex
      INSTANCE_SECRET: \${INSTANCE_SECRET}
      DATABASE_URL: \${DATABASE_URL}
      RUST_LOG: info
      DISABLE_BEACON: ""
      CONVEX_SELF_HOSTED_ADMIN_KEY: \${CONVEX_SELF_HOSTED_ADMIN_KEY}
      CONVEX_INSTANCE_SECRET: \${CONVEX_INSTANCE_SECRET}
    ports:
      - \${CONVEX_EXTERNAL_PORT_0:-3210}:3210
      - \${CONVEX_EXTERNAL_PORT_1:-3211}:3211
    volumes:
      - convex-data:/convex/data
    healthcheck:
      test:
        - CMD-SHELL
        - curl -f http://localhost:3210/version
      interval: 5s
      timeout: 5s
      retries: 5
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  redis:
    image: redis:8-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_EXTERNAL_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    network_mode: service:openclaw-gateway
    cap_drop:
      - NET_RAW
      - NET_ADMIN
    security_opt:
      - no-new-privileges:true
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    entrypoint:
      - node
      - dist/index.js
    depends_on:
      - openclaw-gateway
volumes:
  convex-data:
  redis-data:
  tailscale-state:
networks:
  openclaw-network:
    driver: bridge
"
`;

exports[`compose snapshot tests > researcher preset (qdrant + searxng + browserless + redis) 1`] = `
"services:
  openclaw-gateway:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      PUID: \${PUID:-1000}
      PGID: \${PGID:-1000}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
      NOTIFY_DISCORD: \${NOTIFY_DISCORD:-}
      NOTIFY_SLACK: \${NOTIFY_SLACK:-}
      NOTIFY_TELEGRAM_TOKEN: \${NOTIFY_TELEGRAM_TOKEN:-}
      NOTIFY_TELEGRAM_CHAT: \${NOTIFY_TELEGRAM_CHAT:-}
      NOTIFY_EMAIL_TO: \${NOTIFY_EMAIL_TO:-}
      NOTIFY_EMAIL_FROM: \${NOTIFY_EMAIL_FROM:-}
      NOTIFY_EMAIL_SMTP: \${NOTIFY_EMAIL_SMTP:-}
      NOTIFY_NTFY_TOPIC: \${NOTIFY_NTFY_TOPIC:-}
      NOTIFY_PUSHOVER_TOKEN: \${NOTIFY_PUSHOVER_TOKEN:-}
      NOTIFY_PUSHOVER_USER: \${NOTIFY_PUSHOVER_USER:-}
      NOTIFY_GOTIFY_URL: \${NOTIFY_GOTIFY_URL:-}
      NOTIFY_GOTIFY_TOKEN: \${NOTIFY_GOTIFY_TOKEN:-}
      BROWSERLESS_HOST: browserless
      BROWSERLESS_PORT: "3000"
      BROWSERLESS_TOKEN: \${BROWSERLESS_TOKEN}
      QDRANT_HOST: qdrant
      QDRANT_PORT: "6333"
      REDIS_HOST: redis
      REDIS_PORT: "6379"
      REDIS_PASSWORD: \${REDIS_PASSWORD}
      SEARXNG_HOST: searxng
      SEARXNG_PORT: "8080"
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    ports:
      - \${OPENCLAW_GATEWAY_PORT:-18789}:18789
      - \${OPENCLAW_BRIDGE_PORT:-18790}:18790
    networks:
      - openclaw-network
    init: true
    restart: unless-stopped
    command:
      - node
      - dist/index.js
      - gateway
      - --bind
      - \${OPENCLAW_GATEWAY_BIND:-lan}
      - --port
      - "18789"
      - --allow-unconfigured
    healthcheck:
      test:
        - CMD
        - node
        - -e
        - fetch('http://127.0.0.1:18789/healthz').then((r)=>process.exit(r.ok?0:1)).catch(()=>process.exit(1))
      interval: 30s
      timeout: 5s
      retries: 5
      start_period: 20s
    depends_on:
      browserless:
        condition: service_healthy
      convex:
        condition: service_healthy
      qdrant:
        condition: service_healthy
      redis:
        condition: service_healthy
      searxng:
        condition: service_healthy
  browserless:
    image: browserless/chrome:latest
    environment:
      TOKEN: \${TOKEN}
      MAX_CONCURRENT_SESSIONS: "5"
    ports:
      - \${BROWSERLESS_EXTERNAL_PORT:-3010}:3000
    healthcheck:
      test:
        - CMD-SHELL
        - curl -sf http://localhost:3000/?token=$TOKEN || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  convex:
    image: ghcr.io/get-convex/convex-backend:latest
    environment:
      CONVEX_CLOUD_ORIGIN: http://127.0.0.1:3210
      CONVEX_SITE_ORIGIN: http://127.0.0.1:3211
      INSTANCE_NAME: openclaw-convex
      INSTANCE_SECRET: \${INSTANCE_SECRET}
      DATABASE_URL: \${DATABASE_URL}
      RUST_LOG: info
      DISABLE_BEACON: ""
      CONVEX_SELF_HOSTED_ADMIN_KEY: \${CONVEX_SELF_HOSTED_ADMIN_KEY}
      CONVEX_INSTANCE_SECRET: \${CONVEX_INSTANCE_SECRET}
    ports:
      - \${CONVEX_EXTERNAL_PORT_0:-3210}:3210
      - \${CONVEX_EXTERNAL_PORT_1:-3211}:3211
    volumes:
      - convex-data:/convex/data
    healthcheck:
      test:
        - CMD-SHELL
        - curl -f http://localhost:3210/version
      interval: 5s
      timeout: 5s
      retries: 5
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  qdrant:
    image: qdrant/qdrant:v1.17.1
    environment:
      QDRANT__SERVICE__GRPC_PORT: "6334"
    ports:
      - \${QDRANT_EXTERNAL_PORT:-6333}:6333
    volumes:
      - qdrant-data:/qdrant/storage
    healthcheck:
      test:
        - CMD-SHELL
        - bash -c 'echo > /dev/tcp/localhost/6333' || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 10s
    restart: unless-stopped
    networks:
      - openclaw-network
  redis:
    image: redis:8-alpine
    environment:
      REDIS_PASSWORD: \${REDIS_PASSWORD}
    ports:
      - \${REDIS_EXTERNAL_PORT:-6379}:6379
    volumes:
      - redis-data:/data
    healthcheck:
      test:
        - CMD-SHELL
        - redis-cli ping
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - openclaw-network
  searxng:
    image: searxng/searxng:2026.2.23-4964d664f
    ports:
      - \${SEARXNG_EXTERNAL_PORT:-8080}:8080
    volumes:
      - searxng-data:/etc/searxng
    healthcheck:
      test:
        - CMD-SHELL
        - wget -q --spider http://localhost:8080/ || exit 1
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 15s
    restart: unless-stopped
    networks:
      - openclaw-network
  openclaw-cli:
    image: \${OPENCLAW_IMAGE:-ghcr.io/openclaw/openclaw:latest}
    network_mode: service:openclaw-gateway
    cap_drop:
      - NET_RAW
      - NET_ADMIN
    security_opt:
      - no-new-privileges:true
    environment:
      HOME: /home/node
      TERM: xterm-256color
      OPENCLAW_GATEWAY_TOKEN: \${OPENCLAW_GATEWAY_TOKEN}
      OPENCLAW_ALLOW_INSECURE_PRIVATE_WS: \${OPENCLAW_ALLOW_INSECURE_PRIVATE_WS:-}
      BROWSER: echo
      CLAUDE_AI_SESSION_KEY: \${CLAUDE_AI_SESSION_KEY:-}
      CLAUDE_WEB_SESSION_KEY: \${CLAUDE_WEB_SESSION_KEY:-}
      CLAUDE_WEB_COOKIE: \${CLAUDE_WEB_COOKIE:-}
      OPENAI_API_KEY: \${OPENAI_API_KEY}
      ANTHROPIC_API_KEY: \${ANTHROPIC_API_KEY}
      GOOGLE_API_KEY: \${GOOGLE_API_KEY}
      XAI_API_KEY: \${XAI_API_KEY}
      DEEPSEEK_API_KEY: \${DEEPSEEK_API_KEY}
      GROQ_API_KEY: \${GROQ_API_KEY}
      OPENROUTER_API_KEY: \${OPENROUTER_API_KEY}
      MISTRAL_API_KEY: \${MISTRAL_API_KEY}
      TOGETHER_API_KEY: \${TOGETHER_API_KEY}
      OLLAMA_API_KEY: \${OLLAMA_API_KEY}
      NVIDIA_API_KEY: \${NVIDIA_API_KEY}
    volumes:
      - \${OPENCLAW_CONFIG_DIR:-./openclaw/config}:/home/node/.openclaw
      - \${OPENCLAW_WORKSPACE_DIR:-./openclaw/workspace}:/home/node/.openclaw/workspace
    stdin_open: true
    tty: true
    init: true
    entrypoint:
      - node
      - dist/index.js
    depends_on:
      - openclaw-gateway
volumes:
  convex-data:
  qdrant-data:
  redis-data:
  searxng-data:
  tailscale-state:
networks:
  openclaw-network:
    driver: bridge
"
`;
